--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Car__c</members>
-        <name>CustomObject</name>
+        <members>carController</members>
+        <name>ApexClass</name>
     </types>
     
     <version>62.0</version>
