--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -4,6 +4,11 @@
         <members>carController</members>
         <name>ApexClass</name>
     </types>
+
+     <types>
+       <members>*</members>
+       <name>LightningMessageChannel</name>
+    </types>
     
     <version>62.0</version>
 </Package>
